# doodlin-assignment

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.secrets/: secret.json
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_reason_for_refusal.py  0005_alter_user_name.py
assignment/: manage.py
assignment/accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
assignment/accounts/migrations/: 0001_initial.py  0003_alter_resignation_resigned_at.py  0004_alter_employee_authorization_grade.py
assignment/config/: local.py
assignment/config/settings/: base.py  production.py
assignment/static/css/: index.css
assignment/templates/: detail.html  guide.html
assignment/templates/user/: login.html  signup.html
config/: urls.py
config/settings/: base.py  development.py  production.py
static/css/: index.css
templates/: base.html  detail.html  guide.html  index.html  list.html  pagination.html
templates/user/: login.html  signup.html
