[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["jeha00 <rudtls0611@naver.com>"]
readme = "README.md"
packages = [{include = "assignment"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django-debug-toolbar = "^4.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
